--- a/MyApplication/app/src/main/res/layout/fragment_register.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    android:background="@drawable/pagebkg"
+    android:background="@drawable/gradient3"
     tools:context=".fragments.RegisterFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +24,7 @@
             android:layout_marginTop="20dp"
             android:text="Register"
             android:textStyle="bold"
-            android:textColor="@color/lavander"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@id/firstnameLayout">
 
         </TextView>
@@ -48,6 +48,7 @@
                 style="@style/LoginTextInputInnerFieldStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:hint="Type your Firstname"
                 android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -70,6 +71,7 @@
                 style="@style/LoginTextInputInnerFieldStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:hint="Type your Lastname"
                 android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -93,6 +95,7 @@
                 style="@style/LoginTextInputInnerFieldStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:hint="Type your Email"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -117,6 +120,7 @@
                 style="@style/LoginTextInputInnerFieldStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:hint="Type Your Password"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -142,6 +146,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Retype Your Password"
+                android:textColor="@color/white"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -152,14 +157,14 @@
             app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLayout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_margin="@dimen/margin"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
             android:padding="10dp"
             app:layout_constraintBottom_toTopOf="@+id/radioGroupPreferences"
             android:textSize="20dp"
             android:text="Ce evenimente ti-ar starni interesul?"
             android:textStyle="bold"
-            android:textColor="@color/lavander"
+            android:textColor="@color/white"
             >
         </TextView>
 
@@ -179,37 +184,73 @@
                 android:id="@+id/checkBoxConcerts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Concerts" />
+                android:textColor="@color/white"
+                android:text="Concerte" />
+
+
+            <CheckBox
+                android:id="@+id/checkBoxFestival"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Festival" />
 
             <CheckBox
                 android:id="@+id/checkBoxTheatre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Theatre" />
+                android:textColor="@color/white"
+                android:text="Teatru" />
 
             <CheckBox
-                android:id="@+id/checkBoxOutdoor"
+                android:id="@+id/checkBoxBalet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Outdoor Performances" />
+                android:textColor="@color/white"
+                android:text="Balet/Dans" />
 
             <CheckBox
-                android:id="@+id/checkBox2"
+                android:id="@+id/checkBoxExpozitie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2Outdoor Performances" />
+                android:textColor="@color/white"
+                android:text="Expozitie" />
 
             <CheckBox
-                android:id="@+id/checkBox3"
+                android:id="@+id/checkBoxComedie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3Outdoor Performances" />
+                android:textColor="@color/white"
+                android:text="Comedie" />
 
             <CheckBox
-                android:id="@+id/checkBox4"
+                android:id="@+id/checkBoxSport"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4Outdoor Performances" />
+                android:textColor="@color/white"
+                android:text="Sport" />
+
+            <CheckBox
+                android:id="@+id/checkBoxStreetFood"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Street food" />
+
+            <CheckBox
+                android:id="@+id/checkBoxWorkshop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Workshop" />
+
+            <CheckBox
+                android:id="@+id/checkBoxTarg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:outlineSpotShadowColor="@color/lavander"
+                android:textColor="@color/white"
+                android:text="Targ" />
 
         </RadioGroup>
 
@@ -217,9 +258,9 @@
             android:id="@+id/button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:background="@color/lavander"
-            android:text="Sign Up"
+            android:layout_marginHorizontal="50dp"
+            android:background="@drawable/rounded_button"
+            android:text="Register"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
