--- a/MyApplication/app/src/main/res/layout/fragment_welcome.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_welcome.xml
@@ -4,14 +4,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.WelcomeFragment">
+    tools:context=".fragments.WelcomeFragment"
+    android:background="@drawable/c3">
+
+    <TextView
+        android:id="@+id/tv_welcome_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Bine ai venit!"
+        android:textColor="@color/white"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="100dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bt_to_login_fragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:background="@color/lavander"
+        android:layout_marginHorizontal="50dp"
+        android:background="@drawable/rounded_button"
         android:layout_marginTop="500dp"
         android:text="Login"
         android:textColor="@color/white"
@@ -19,23 +34,19 @@
         app:layout_constraintBottom_toTopOf="@+id/bt_to_register_fragment"
         android:layout_marginBottom="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent" />
 
-    </androidx.appcompat.widget.AppCompatButton>
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bt_to_register_fragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:background="@color/lavander"
-        android:text="sign up"
+        android:layout_marginHorizontal="50dp"
+        android:background="@drawable/rounded_button"
+        android:text="register"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-    </androidx.appcompat.widget.AppCompatButton>
-
+        app:layout_constraintRight_toRightOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
