--- a/MyApplication/app/src/main/res/layout/fragment_favorite_tickets.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_favorite_tickets.xml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.FavoriteTicketsFragment">
-
+    tools:context=".fragments.FavoriteTicketsFragment"
+    android:background="@drawable/gradient3">
 
     <TextView
         android:id="@+id/tv_front_text_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:visibility="invisible"
+        android:textSize="20sp"
         android:gravity="center"
-        android:maxLines="@integer/material_motion_duration_long_2"
-        android:text="Ne pare rau dar nu ai setat nicio preferinta. Poti sa te duci in setari si sa alegi ce categorii te intereseaza" />
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:text="Biletele tale cu categoriile preferate"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleview_ticket_item_fragment_favorite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
-
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_front_text_favorite"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
     </androidx.recyclerview.widget.RecyclerView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
