--- a/MyApplication/app/src/main/res/layout/fragment_register.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_register.xml
@@ -185,7 +185,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:text="Concerte" />
+                android:text="Concert" />
 
 
             <CheckBox
