--- a/MyApplication/app/src/main/res/layout/fragment_admin_add_ticket.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_admin_add_ticket.xml
@@ -51,7 +51,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="80dp"
             android:gravity="center_vertical"
-            android:text="Selecteaza data"
+            android:text="@string/selecteaza_data"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintLeft_toRightOf="@+id/idBtnPickDate"
@@ -76,7 +76,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:gravity="center_vertical"
-            android:text="Selecteaza ora"
+            android:text="@string/selecteaza_ora"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintLeft_toRightOf="@+id/idBtnPickTime"
@@ -317,6 +317,25 @@
                 android:textColor="@color/white" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/idLayoutImageUrl"
+            >
+            <CheckBox
+                android:id="@+id/checkBoxNotification"
+                android:layout_marginTop="20dp"
+               android:layout_marginEnd="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Doriti ca utilizatorii sa primeasca notificare in legatura cu acest ticket" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/idBtnAddTicket"
@@ -331,6 +350,6 @@
             android:background="@drawable/rounded_button"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/idLayoutImageUrl" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
