--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="lavander">#8692F2</color>
     <color name="lavander2">#FFF4F2</color>
     <color name="purple">#9586c0</color>
+    <color name="lavander3">#BDA3EC</color>
 </resources>
