--- a/MyApplication/app/src/main/res/layout/fragment_details_ticket.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_details_ticket.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.DetailsTicketFragment">
+    tools:context=".fragments.DetailsTicketFragment"
+    android:background="@drawable/gradient3">
 
     <ImageView
         android:id="@+id/image_details_ticket"
@@ -26,6 +27,7 @@
         android:textStyle="bold"
         android:foregroundGravity="center"
         android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image_details_ticket"
@@ -75,7 +77,7 @@
                         android:layout_gravity="center"
                         android:padding="3dp"
                         android:textAllCaps="true"
-                        android:textColor="@color/lavander"
+                        android:textColor="@color/lavander3"
                         android:textSize="20dp"
                         android:textStyle="bold"
                         tools:text="23 martie">
@@ -97,7 +99,7 @@
                         android:layout_gravity="center"
                         android:gravity="center_vertical"
                         android:padding="3dp"
-                        android:textColor="@color/lavander"
+                        android:textColor="@color/lavander3"
                         android:textSize="15dp"
                         tools:text="19:00">
 
@@ -129,7 +131,7 @@
                         android:textAllCaps="true"
                         android:gravity="center"
                         android:layout_gravity="center"
-                        android:textColor="@color/lavander"
+                        android:textColor="@color/lavander3"
                         android:textSize="20dp"
                         android:textStyle="bold"
                         tools:text="MARE MINUNE A CEVA fggfjg fghgfjh gf gh">
@@ -150,7 +152,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="2dp"
-                        android:textColor="@color/lavander"
+                        android:textColor="@color/lavander3"
                         android:textSize="15dp"
                         tools:text="SalaPalatului, Bucuresti">
 
@@ -199,6 +201,7 @@
         android:text="Detalii eveniment"
         android:textSize="25dp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constrant_layout_details_ticket">
@@ -217,6 +220,7 @@
         android:textAlignment="viewStart"
         android:textSize="20dp"
         android:textStyle="italic"
+        android:textColor="@color/white"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_only"
