--- a/MyApplication/app/src/main/res/layout/fragment_favorite_tickets.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_favorite_tickets.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.FavoriteTicketsFragment"
     android:background="@drawable/gradient3">
 
@@ -23,13 +23,13 @@
         android:textColor="@color/white"
         android:text="Biletele tale cu categoriile preferate"/>
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleview_ticket_item_fragment_favorite"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_front_text_favorite"
+        app:layout_constraintTop_toBottomOf="@id/tv_front_text_favorite"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
     </androidx.recyclerview.widget.RecyclerView>
