--- a/MyApplication/app/src/main/res/layout/fragment_payment_details_ticket.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_payment_details_ticket.xml
@@ -351,6 +351,7 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <Button
+        android:id="@+id/buttonBuyTicket"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/linear_layout_payment"
@@ -358,7 +359,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:padding="10dp"
         android:layout_margin="30dp"
-        android:text="Buy Ticket">
+        android:text="Cumpara bilet"
+        android:textStyle="bold">
     </Button>
 
 
